syntax = "proto3";

package spark;

option go_package = "github.com/lightsparkdev/spark/proto/spark_tree";
import "spark.proto";

service SparkTreeService {
    rpc get_leaf_denomination_counts(GetLeafDenominationCountsRequest) returns (GetLeafDenominationCountsResponse) {}
    rpc fetch_polarity_scores(FetchPolarityScoreRequest) returns (stream PolarityScore) {}
}

message GetLeafDenominationCountsRequest {
    bytes owner_identity_public_key = 1;
    spark.Network network = 2;
}

message GetLeafDenominationCountsResponse {
    map<uint64, uint64> counts = 1;
}

message FetchPolarityScoreRequest {
    repeated bytes public_keys = 1;
}

message PolarityScore {
    string leaf_id = 1;
    bytes public_key = 2;
    float score = 3;
}
